test/algeff/wrong/eff-rec5.kk.out
test/algeff/wrong/eff-rec5.kk(10,23): error: invalid syntax
 unexpected '(': local parameters are no longer supported, use a local 'var' instead